[package]
name = "bombhopper"
version = "0.1.1"
authors = ["voxal"]
edition = "2021"

description = """Rust bindings for bombhopper.io."""

license = "MIT/Apache-2.0"
repository = "https://github.com/voxxal/bombhopper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.0"